[package]
name = "loirc"
version = "0.2.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Low-level IRC client library with robustness in mind."
documentation = "http://sbstp.github.io/loirc/loirc/"
keywords = ["irc", "client"]
homepage = "https://github.com/SBSTP/loirc"
repository = "https://github.com/SBSTP/loirc"
readme = "README.md"
license = "Zlib"
exclude = ["docs.sh"]

[dependencies]
bytes = "0.3"
encoding = "0.2.32"
mio = "0.5"
slab = "0.1"
